Corrected mixin for commentSectionWrap

--- a/Page Office/CSS/Page_Dashboard.scss
+++ b/Page Office/CSS/Page_Dashboard.scss
@@ -984,7 +984,7 @@
 
 	#commentSectionWrap{		
 		@include commentSectionWrap_Style;
-		@include commentSectionText_Laptop_Style;
+		@include noCommentText_Laptop_Style;
 	}
 
 	#commentSectionWrap::-webkit-scrollbar{
